<resources>
    <string name="app_name" translatable="false">JUSS FUN</string>
    <string name="facebook_app_id" translatable="false">1393665711030123</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1393665711030123</string>
    <string name="admob_id" translatable="false">ca-app-pub-6210493408657968~6415359831</string>
    <string name="banner_id" translatable="false">ca-app-pub-6210493408657968/8072056433</string>
    <string name="video_ad_id" translatable="false">ca-app-pub-6210493408657968/1955054852</string>
    <string name="dynamic_link_filter" translatable="false">jussfun.page.link</string>
    <string name="ios_bundle_id" translatable="false">com.jussfun.jussfun</string>
    <string name="ios_app_store_id" translatable="false">1465570081</string>
    <string name="notification_channel_id" translatable="false">jussfun_notification_channel</string>
    <string name="layout_direction">0</string>
    <string name="gif">Gif</string>
    <string name="slide_to_cancel">Slide to cancel</string>
    <string name="audio_length_error">Hold to record, release to send.</string>
    <string name="file_not_found">File not found</string>
    <string name="audio">Audio</string>
    <string name="gift_to_cash">You have %1$s Gifts worth %2$s $</string>
    <string name="gift_to_cash_no">You have %1$s Gifts</string>
    <string name="gift_to_cash_not_enough">You don\'t have enough gifts</string>
    <string name="convert_gifts_to_money_desc">Are you sure want to convert the gifts to money?</string>
    <string name="update_paypal_id">Update your Paypal ID</string>
    <string name="verify_mail">Verify the mail</string>
    <string name="translate">Translate</string>
    <string name="theme">Theme</string>
    <string name="lighttheme">Light Theme</string>
    <string name="darktheme">Dark Theme</string>
    <string name="systemtheme">System Theme</string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_no_secure_decoder"><![CDATA[This device does not provide a secure decoder for <xliff:g id=\"mime_type\">%1$s</xliff:g>]]></string>
    <string name="error_no_decoder"><![CDATA[This device does not provide a decoder for <xliff:g id=\"mime_type\">%1$s</xliff:g>]]></string>
    <string name="error_instantiating_decoder"><![CDATA[Unable to instantiate decoder <xliff:g id=\"decoder_name\">%1$s</xliff:g>]]></string>
    <string name="using_video_capture">Using video capture?</string>
    <string name="back_camera">Back camera</string>
    <string name="hashtags">Hashtags</string>
    <string name="video_history">Recently watched</string>
    <string name="recent">Recent</string>
    <string name="hashtag">Hashtag</string>
    <string name="views">views</string>
    <string name="select_hashtag">Select Hashtag</string>
    <string name="video_privacy">Video privacy</string>
    <string name="tag_public">Public</string>
    <string name="tag_private">Private</string>
    <string name="select_atleast_one_user">Select atleast one user</string>
    <string name="popular_countries">Popular countries</string>
    <string name="received_gifts">Received gifts</string>
    <string name="share_within_app">Share within app</string>
    <string name="share_to_external">Share to external</string>
    <string name="gifts_received">Gifts received</string>
    <string name="gifts_by">Gifts by</string>
    <string name="really_remove_from_list">Do you really want to remove the video from the list?</string>
    <string name="history_cleared_successfully">History cleared successfully</string>
    <string name="trending_hashtag">Trending Hashtag</string>
    <string name="hash_symbol" translatable="false">#</string>
    <string name="at_symbol" translatable="false">\@</string>
    <string name="invited_you">invited you</string>
    <string name="you_sent_an_invite_link">You sent an invite link</string>
    <string name="shared_a_stream">Shared a stream</string>
    <string name="join">join</string>
    <string name="playback_not_ready_yet">Placyback not ready yet</string>
    <string name="stream_share_description"><![CDATA[shared video. Click here to watch -> ]]></string>
    <string name="camera">Camera</string>
    <string name="rear_camera">Front camera</string>
    <string name="capture_setting">Capture setting</string>
    <string name="clear_data">Clear data</string>
    <string name="cache">Cache</string>
    <string name="data">Data</string>
    <string name="clear_data_description">All chats &amp; and video caches will be deleted. Do you want to clear data?</string>
    <string name="unblock_call_description">Unblock the user to make a call</string>
    <string name="search_for_hashtag">Search for Hashtag</string>
    <string name="no_hashtags">No hashtags</string>
    <string name="unblock_follow_description">Unblock user to follow</string>
    <string name="grant">Grant</string>
    <string name="allow_pop_up_window">Allow pop-up window</string>
    <string name="pop_up_permission_description">Allow the pop-up permission to enjoy the incoming call functionalities even if the app is not in background</string>
    <string name="don_t_ask_again">Don\'t ask again</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="something_wrong_with_the_stream">Something wrong with the stream</string>
    <string name="no_countries_found">No countries found</string>
    <string name="login_with_mobile">Login with Mobile</string>
    <string name="facebook">Facebook</string>
    <string name="terms_and_conditions_des">By continuing, agree our &lt;u>Privacy Policy&lt;/u></string>
    <string name="upload_and_skip">Upload photo or Skip</string>
    <string name="name">Name</string>
    <string name="your_name">Your name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="next">Next</string>
    <string name="gender">Gender</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_date_of_birth">Enter Date of Birth</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="away_from_chat">away from chat</string>
    <string name="settings">Settings</string>
    <string name="okay">Okay</string>
    <string name="free_gems">Free Gems</string>
    <string name="pick_image_intent_text">Choose an image</string>
    <string name="camera_error">Enable camera permission</string>
    <string name="storage_permission_error">Enable storage permission</string>
    <string name="camera_storage_error">Enable camera and storage permissions</string>
    <string name="camera_microphone_permission_error">Enable camera and microphone permissions</string>
    <string name="camera_microphone_storage_permission_error">Enable camera, microphone and storage permissions</string>
    <string name="touch_to_start">Tap the screen to start</string>
    <string name="touch_to_full">Touch to full</string>
    <string name="filter">Filter</string>
    <string name="age">Age</string>
    <string name="followings">Followings</string>
    <string name="followers">Followers</string>
    <string name="gems">Gems</string>
    <string name="gifts">Gifts</string>
    <string name="expired">Expired</string>
    <string name="your_membership">Your membership</string>
    <string name="renewal">Renewal</string>
    <string name="payment_id">Payment id</string>
    <string name="save">Save</string>
    <string name="swipe_change_photo">Swipe change photo</string>
    <string name="swipe_to_see_friends">Swipe right to see your friends</string>
    <string name="swipe_to_see_whos_interested">Swipe left to see your likes</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="invalid_url_title">Invalid URL</string>
    <string name="invalid_url_text">The URL or room name you entered resulted in an invalid URL: %1$s
    </string>
    <string name="channel_error_title">Connection error</string>
    <string name="connecting_to">Connecting to: %1$s</string>
    <string name="missing_url">FATAL ERROR: Missing URL to connect to.</string>
    <string name="camera2_texture_only_error">Camera2 only supports capturing to texture. Either disable Camera2 or enable capturing to texture in the options.</string>
    <string name="ok">OK</string>
    <string name="swipe_to_skip">Swipe skip</string>
    <string name="followed_successfully">Followed successfully</string>
    <string name="unfollowed_successfully">Unfollowed successfully</string>
    <string name="no_followers_yet">No followers yet</string>
    <string name="no_followings_yet">No followings yet</string>
    <string name="no_gems_list_found">No gems list found</string>
    <string name="no">No</string>
    <string name="really_want_exit">Are you sure want to exit?</string>
    <string name="stop_finding_partner">Are you sure want to stop finding a partner?</string>
    <string name="really_want_logout">Are you sure want to logout?</string>
    <string name="really_want_clear">Are you sure want to clear chat?</string>
    <string name="really_want_clear_history">Are you sure want to clear history?</string>
    <string name="profile_updated_successfully">Profile Updated Successfully</string>
    <string name="already_in_live">Sorry! already in live</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="partner_left_chat">This partner just left. Searching another one</string>
    <string name="account_deactivated_by_admin">Your account has been deactivated by Admin</string>
    <string name="your_broadcast_deactivated_by_admin">Your broadcast has been blocked by Admin</string>
    <string name="broadcast_deactivated_by_admin">Broadcast has been blocked by Admin</string>
    <string name="stream_deactivated_by_admin">Your stream has been blocked by Admin</string>
    <string name="get_prime_benefits">Get VIP subscription benefits</string>
    <string name="subscribe">Subscribe</string>
    <string name="history">History</string>
    <string name="no_users_visited_yet">No users visited yet</string>
    <string name="stickers">Stickers</string>
    <string name="congratulations_you_got">Congrats! %s Free Gems Added in your profile. EARN FREE GEMS EVERYDAY</string>
    <string name="gems_free_coins"> gems Free!</string>
    <string name="report_user">Report</string>
    <string name="reported_successfully">Reported successfully</string>
    <string name="undo_report_successfully">Undo Report successfully</string>
    <string name="prime">VIP</string>
    <string name="send">Send</string>
    <string name="not_enough_gems">Not enough gems</string>
    <string name="not_enough_gems_to_convert">Not enough gems to convert</string>
    <string name="something_went_wrong_try_again">Something went wrong. Try again</string>
    <string name="location">Location</string>
    <string name="select_all">Select all</string>
    <string name="no_gems_yet">No gems yet</string>
    <string name="free_gems_content">Invite friends to join %1$s and earn gems or Go and watch video to get free gems</string>
    <string name="refer_your_friends">Refer your friends</string>
    <string name="notification">Notifications</string>
    <string name="chat">Chat</string>
    <string name="no_one_contact_me">No one contact me</string>
    <string name="hide_my_age">Hide my age</string>
    <string name="profile">Profile</string>
    <string name="notify_if_anyone_follows">Notify if anyone follows</string>
    <string name="do_not_disturb">Do not disturb</string>
    <string name="go_live">Go live</string>
    <string name="security">Security</string>
    <string name="enable_device_lock">Device lock</string>
    <string name="feeds">Feeds</string>
    <string name="messages">Messages</string>
    <string name="add_photos_videos">Add a Photo or Video</string>
</resources>