<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cardBackgroundColor="@color/colorBlack"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTitle"
                style="@style/TextWhiteRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/allow_pop_up_window"
                android:textSize="@dimen/text_header" />

            <ImageView
                android:id="@+id/dimenImage"
                android:layout_width="70dp"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_call_accept" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtDescription"
                style="@style/TextWhiteLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:maxLines="3"
                android:padding="10dp"
                android:text="@string/pop_up_permission_description"
                android:textSize="@dimen/text_medium" />

            <Button
                android:id="@+id/btnAllow"
                style="@style/ButtonPrimaryLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rounded_corner_primary"
                android:layout_marginBottom="10dp"
                android:elevation="0dp"
                android:text="@string/allow" />

            <Button
                android:id="@+id/btnDeny"
                style="@style/ButtonWhiteLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_solid_white"
                android:elevation="0dp"
                android:text="@string/deny" />

            <CheckBox
                android:id="@+id/btnDontAsk"
                style="@style/TextWhiteLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:buttonTint="@color/colorPrimary"
                android:checked="false"
                android:text="@string/don_t_ask_again"
                android:textColor="@color/colorWhiteText" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>