<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLay"
    android:forceHasOverlappingRendering="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.app.jussfun.ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iconAppLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_logo_white" />

        <Button
            android:id="@+id/btnMobile"
            style="@style/ButtonWhiteLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_corner_primary"
            android:padding="10dp"
            android:text="@string/login_with_mobile"
            android:textColor="@color/colorWhiteText"
            android:textSize="@dimen/text_medium" />

        <Button
            android:id="@+id/btnFacebook"
            style="@style/ButtonWhiteLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_solid_white"
            android:padding="10dp"
            android:text="@string/facebook"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_medium" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtTerms"
        style="@style/TextWhiteLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/terms_and_conditions_des"
        android:textSize="@dimen/text_normal" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/CircularProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>