<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:background="@drawable/gradient_bg"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="5dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/contentLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/size_20"
                android:paddingBottom="@dimen/size_20"
                android:background="@drawable/gradient_bg">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtTitle"
                    style="@style/TextWhiteRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/free_gems"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_medium" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtDescription"
                    style="@style/TextWhiteLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/congratulations_you_got"
                    android:textSize="@dimen/text_medium_large" />

                <Button
                    android:id="@+id/btnAdd"
                    style="@style/ButtonWhiteLight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_solid_white"
                    android:elevation="0dp"
                    android:text="@string/add_photos_videos"
                    android:textColor="@color/colorSecondaryTexts" />

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

</RelativeLayout>